// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> test should not render player turn if playturn prop not passed 1`] = `
<div
  className="header"
>
  <div
    className="title-wrapper"
  >
    <h3
      className="title"
    >
      Enjoy Tic Tac Toe
    </h3>
  </div>
  <div
    className="turn-info"
  >
    <div
      className="turn"
    />
  </div>
</div>
`;

exports[`<Header /> test should render title and player name whose turn it is 1`] = `
<div
  className="header"
>
  <div
    className="title-wrapper"
  >
    <h3
      className="title"
    >
      Enjoy Tic Tac Toe
    </h3>
  </div>
  <div
    className="turn-info"
  >
    <div
      className="turn"
    >
      Player 1
    </div>
  </div>
</div>
`;
